# caliper

./: .gitignore  CLAUDE.md  CURSOR_INSTRUCTIONS.md  Dockerfile  Makefile  README.md  SPRINT1_SUMMARY.md  SPRINT2_SUMMARY.md  SPRINT3_SUMMARY.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
adr/: 0001-monorepo-organization.md  0002-timescaledb-selection.md  0003-fastapi-backend.md  0004-secrets-management.md  0005-backtest-engine-design.md  0006-api-architecture.md  0007-execution-architecture.md
apps/dashboard/: README.md  next.config.mjs  package.json  tailwind.config.ts  vercel.json
apps/dashboard/src/app/: globals.css  layout.tsx
apps/dashboard/src/app/(dashboard)/: error.tsx  layout.tsx  loading.tsx  page.tsx
apps/dashboard/src/components/: alerts-widget.tsx  approval-queue.tsx  baseline-comparison.tsx  confidence-indicator.tsx  equity-chart.tsx  explanation-card.tsx  feature-importance-chart.tsx  header.tsx  providers.tsx  sidebar.tsx  stats-card.tsx
apps/dashboard/src/components/ui/: tooltip-wrapper.tsx
apps/dashboard/src/lib/: api.ts  glossary.ts  types.ts
apps/dashboard/src/lib/api/: models.ts
apps/dashboard/src/lib/hooks/: index.ts  (+5 more)
configs/environments/: .env.example
configs/strategies/: ml_direction_v1.yaml  sma_crossover_v1.yaml
configs/training/: first_model.yaml
docs/: FEATURES.md  api-contracts.md  architecture.md  dashboard-spec.md  data-contracts.md  design-guidelines.md  design-refinement.md  floorplan.md  instructions.md  research.md  risk-policy.md  security.md
docs/runbooks/: api-verification.md  backtest-verification.md  execution-verification.md  ml-safety-verification.md  stress-scenarios.md  vercel-deployment.md
docs/workflow/: MULTI_AGENT_QUICKSTART.md  MULTI_AGENT_SETUP.md  SPRINT3_AGENT_PROMPTS.md  SPRINT4_AGENT_PROMPTS.md  SPRINT5_AGENT_PROMPTS.md  SPRINT6_AGENT_PROMPTS.md  WORKFLOW.md  sprint-3-multi.md  sprint-4-multi.md  sprint-5-multi.md  sprint-6-multi.md
plans/: SPRINT1_SUMMARY.md  SPRINT4_SUMMARY.md  SPRINT5_SUMMARY.md  SPRINT6_SUMMARY.md  even-more-features.md  findings.md  milestones.md  more-features.md  progress.md  task_plan.md
services/api/: README.md  __init__.py  dependencies.py  main.py  pyproject.toml  test_health.py  test_metrics.py  test_positions.py  test_runs.py  test_strategies.py
services/api/routers/: __init__.py  baselines.py  controls.py  drift.py  explanations.py  health.py  metrics.py  orders.py  positions.py  recommendations.py  runs.py  strategies.py
services/backtest/: README.md  __init__.py  abstention.py  engine.py  models.py  pyproject.toml  report.py  test_engine.py  test_pnl.py  test_report.py  walk_forward.py
services/execution/: README.md  __init__.py  oms.py  pyproject.toml  reconciliation.py
services/execution/broker/: __init__.py  alpaca.py  base.py
services/features/: __init__.py  indicators.py  pipeline.py  pyproject.toml  test_indicators.py
services/ml/: __init__.py  pyproject.toml
services/ml/baselines/: __init__.py  buy_and_hold.py  hold_cash.py  random.py  regret.py
services/ml/confidence/: __init__.py  abstention.py  gating.py  uncertainty.py
services/ml/drift/: README.md  __init__.py  alerts.py  detector.py  health_score.py  metrics.py
services/ml/explainability/: __init__.py  permutation.py  schemas.py  shap_explainer.py  simple_explainer.py
services/ml/hitl/: __init__.py  approval_queue.py
services/ml/inference/: __init__.py  adapter.py
services/ml/performance/: __init__.py  tracker.py
services/ml/training/: __init__.py  train_first_model.py
services/risk/: README.md  __init__.py  circuit_breaker.py  kill_switch.py  limits.py  manager.py  pyproject.toml
tests/: __init__.py
tests/fixtures/: __init__.py  api_data.py  backtest_data.py  execution_data.py  ml_data.py
tests/integration/: test_api_e2e.py  test_backtest_sma_crossover.py  test_hitl_workflow.py  test_kill_switch.py  test_order_flow.py
tests/stress/: __init__.py  test_api_outage.py  test_missing_data.py  test_volatility_spike.py
tests/unit/: test_baselines.py  test_confidence_gating.py  test_drift_detection.py  test_execution.py  test_explainability.py  test_risk_manager.py
(+23 files in other folders)
