[tool.poetry]
name = "quant-ml-trading"
version = "0.1.0"
description = "Quantitative ML Trading Platform"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = "packages/common"},
    # packages/strategies and packages/models will be added in Sprint 2
    # {include = "packages/strategies"},
    # {include = "packages/models"},
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pandas = "^2.1.4"
numpy = "^1.26.3"
# Technical analysis library - optional for Sprint 1, needed for Sprint 2
# Technical analysis library - not needed for Sprint 1 (data ingestion)
# Will be added in Sprint 2 (feature pipeline)
# Note: pandas-ta requires Python 3.12+, alternatives for Python 3.11:
#   - ta-lib (requires C library, harder to install)
#   - Manual calculation using pandas/numpy
#   - Upgrade to Python 3.12+ to use pandas-ta
# pandas-ta = {version = ">=0.3.14b,<0.5.0", allow-prereleases = true}  # Uncomment when Python 3.12+
httpx = "^0.26.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}
python-dotenv = "^1.0.0"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^23.12.1"
ruff = "^0.1.11"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
