[project]
name = "quant-execution"
version = "0.1.0"
description = "Execution engine service for the quant trading platform"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "alpaca-py>=0.21.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
