[project]
name = "quant-risk"
version = "0.1.0"
description = "Risk management service for the quant trading platform"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
